--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ h1, h2, h3, h4, h5, h6, p, a, span, li {
 /* Hero Section */
 #hero {
     display: flex;
+    flex-direction: center;
     align-items: center;
     justify-content: center;
     height: 100vh; /* Full screen height */
@@ -50,6 +51,7 @@ h1, h2, h3, h4, h5, h6, p, a, span, li {
     text-align: center;
     position: relative;
     overflow: hidden;
+    padding-bottom: 50px;
 }
 
 .hero-content {
@@ -86,10 +88,8 @@ h1, h2, h3, h4, h5, h6, p, a, span, li {
 
 /* Scroll down message */
 .scroll-down {
+    margin-top: auto;
     position: absolute;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
     text-align: center;
     font-size: 1rem;
     color: #ecdde7;
