--- a/styles.css
+++ b/styles.css
@@ -88,14 +88,17 @@ h1, h2, h3, h4, h5, h6, p, a, span, li {
 
 /* Scroll down message */
 .scroll-down {
-    margin-top: auto;
     position: absolute;
+    bottom: 20px;
+    left: 50px;
+    transform: translateX(-50%);
     text-align: center;
     font-size: 1rem;
     color: #ecdde7;
     animation: bounce 1.5s infinite;
     cursor: pointer;
     transition: color 0.3s ease, transform 0.3s ease;
+    z-index: 2;
 }
 
 .scroll-down i {
